[package]
name = "aqara-agent2mqtt"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = { version = "0.4" }
paho-mqtt = { version = "0.12", default-features = false, features = [
  "bundled",
] }
tokio = { version = "1.48", features = ["rt", "sync", "time", "macros", "process", "io-util"] }
tokio-stream = "0.1"
tokio-seqpacket = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = { version = "1.21" }
